Fixed responsive CSS to display recipes one on top of another on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,10 @@ h6{
     font-style: italic;
     margin-bottom: 10px;
 }
-/* table{
+table{
     margin-left:auto; 
     margin-right:auto;
-} */
+}
 .help{
     margin-bottom: 10px;
 }
@@ -40,32 +40,19 @@ a{
     height: auto;
     transition: transform .2s;
 }
-.tab{
 
-    display: flex;
-    flex-flow: nowrap;
-    justify-content: center;
-    margin-left:auto; 
-    margin-right:auto;
-}
-.Rec1, .Rec2, .Rec3{
-    max-width: 33%;
-    padding: 5px;
-}
 .Rec1, .Rec2{
     border-right-style: solid;
 }
 .bottom{
     margin-left:auto; 
     margin-right:auto;
+    /* display: none; */
 }
 .recTitle{
     transition: transform .2s;
 }
-.output{
-    margin-left:auto; 
-    margin-right:auto;
-}
+
 
 
 .recTitle:hover, .imageRecipe:hover {
@@ -82,20 +69,34 @@ a{
     display: block;
     margin-left:auto; 
     margin-right:auto;
+    /* display: none; */
 }
+
 button:hover {
   background: white;
   color: black;
 }
-
-@media only screen and (max-width: 600px) {
+@media(min-width: 800px){
     .tab{
-        width: 100%;
-        flex-direction: column;
-        justify-content: center;
-    }
-    /* .Rec1{
-        width:100%;
-    } */
 
+        display: flex;
+        flex-flow: nowrap;
+        justify-content: center;
+        margin-left:auto; 
+        margin-right:auto;
+    }
+    .Rec1, .Rec2, .Rec3{
+        max-width: 33%;
+        padding: 5px;
+    }
+    .output{
+        margin-left:auto; 
+        margin-right:auto;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .Rec1, .Rec2{
+        border-bottom: solid white;
+        border-right: none;
+    }
 }
